hphp/hack/test/typecheck/lambda/lambda_apply2.php.like_types.exp
File "lambda_apply2.php", line 5, characters 5-107:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
